kubernetes/manifests/jellyfin/_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: jellyfin
    name: jellyfin
  name: jellyfin
