kubernetes/manifests/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-deployment
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: slave01
      containers:
        - name: jellyfin
          securityContext:
            privileged: true
          image: docker.io/jellyfin/jellyfin
          ports:
            - containerPort: 8096
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - mountPath: /data/media
              name: media
              readOnly: True
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /dev/dri
              name: quicksync
      volumes:
        - name: quicksync
          hostPath:
            path: /dev/dri
            type: Directory
        - name: media
          hostPath:
            path: /mnt/external-drive
            type: Directory
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
