kubernetes/manifests/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - protocol: TCP
    port: 80 # The port the service exposes
    targetPort: 8096 # The port the container exposes
  type: ClusterIP # Or LoadBalancer if you're on a cloud provider
---
